# ecg-learn-studio

./: .gitignore  IMPLEMENTATION.md  Makefile  PROJECT_CHECKLIST.txt  README.md  REPO_INFO.md
docs/: architecture.md  contributing.md  ml-guide.md
ml-python/: pyproject.toml  requirements.txt
ml-python/src/ecg_learn/: __init__.py
ml-python/src/ecg_learn/api/: __init__.py  handlers.py  server.py
ml-python/src/ecg_learn/data/: __init__.py  downloader.py  loader.py  synthetic.py
ml-python/src/ecg_learn/education/: __init__.py  glossary.py  lessons.py
ml-python/src/ecg_learn/inference/: __init__.py  explainer.py  predictor.py
ml-python/src/ecg_learn/models/: __init__.py  baseline.py  cnn.py  registry.py
ml-python/src/ecg_learn/preprocessing/: __init__.py  features.py  filters.py  segmentation.py
ml-python/src/ecg_learn/quiz/: __init__.py  questions.py  tracker.py
ml-python/src/ecg_learn/training/: __init__.py  checkpoints.py  evaluator.py  trainer.py
ml-python/tests/: __init__.py  conftest.py  test_api.py  test_data.py  test_integration.py  test_models.py  test_preprocessing.py
scripts/: download-datasets.sh  setup.sh
shared-schema/: README.md  protocol-v1.json
tui-rust/: Cargo.toml
tui-rust/src/: app.rs  charts.rs  config.rs  main.rs
tui-rust/src/backend/: mod.rs
tui-rust/src/ui/: explorer.rs  help.rs  home.rs  learn.rs  mod.rs  predict.rs  quiz.rs  train.rs
